k8s/components/external-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
  namespace: service-name
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
