k8s/components/external-service/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-name
  namespace: service-name
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "service-name.ravil.space"
  rules:
    - backendRefs:
        - name: service-name
          port: 8080
